--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Job Description page">
+    <meta name="keywords" content="Job, Description, Roles">
+    <meta name="author" content="Disha Anchan">
     <title>Document</title>
 </head>
 <body>
