feat(jobs): add title page

--- a/jobs.html
+++ b/jobs.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Metatags for Job Description Page -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Job Description page">
     <meta name="keywords" content="Job, Description, Roles">
     <meta name="author" content="Disha Anchan">
-    <title>Document</title>
+
+    <!-- Title of the tab -->
+    <title>Job Description</title>
 </head>
 <body>
     
