feat(jobs): add page heading into header element

--- a/jobs.html
+++ b/jobs.html
@@ -12,6 +12,10 @@
     <title>Job Description</title>
 </head>
 <body>
+    <header>
+        <!-- Company Name -->
+        <h1>Panda Mice Enterprise</h1>
+    </header>
     
 </body>
 </html>
