feat(jobs): add nav bar with nested ul elements

--- a/jobs.html
+++ b/jobs.html
@@ -15,6 +15,16 @@
     <header>
         <!-- Company Name -->
         <h1>Panda Mice Enterprise</h1>
+
+        <!-- Navigation Bar -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>          <!-- Hyperlinked to Home Page-->
+                    <li><a href="jobs.html">Jobs</a></li>           <!-- Hyperlinked to Jobs Page-->
+                    <li><a href="apply.html">Application</a></li>   <!-- Hyperlinked to Application Page-->
+                    <li><a href="about.html">About</a></li>         <!-- Hyperlinked to About Page-->
+                </ul>
+            </nav>
     </header>
     
 </body>
