feat(jobs): add aside element as sidebar

--- a/jobs.html
+++ b/jobs.html
@@ -28,7 +28,14 @@
     </header>
 
     <main>
-        
+        <!-- Sidebar Section -->
+        <aside class="sidebar">
+                <h2>Main Contents</h2>
+            <ul>
+                <li><a href="#job_pos1">AI Programmer</a></li> <!-- Hyperlinked to Job Position 1 Section -->
+                <li><a href="#job_pos2">Game Designer</a></li> <!-- Hyperlinked to Job Position 2 Section -->
+            </ul>
+        </aside>        
     </main>
     
 </body>
