feat(jobs): add heading in main element

--- a/jobs.html
+++ b/jobs.html
@@ -35,6 +35,9 @@
                 <li><a href="#job_pos1">AI Programmer</a></li> <!-- Hyperlinked to Job Position 1 Section -->
                 <li><a href="#job_pos2">Game Designer</a></li> <!-- Hyperlinked to Job Position 2 Section -->
             </ul>
+
+            <!-- Job Description Section -->
+            <h2>Job Description</h2>            
         </aside>        
     </main>
     
