feat(jobs): add section for job 1

--- a/jobs.html
+++ b/jobs.html
@@ -37,7 +37,11 @@
             </ul>
 
             <!-- Job Description Section -->
-            <h2>Job Description</h2>            
+            <h2>Job Description</h2>
+            
+            <section id="job_pos1" class="job-position">
+
+            </section>
         </aside>        
     </main>
     
