chore(jobs): add comment to section job 1

--- a/jobs.html
+++ b/jobs.html
@@ -38,7 +38,8 @@
 
             <!-- Job Description Section -->
             <h2>Job Description</h2>
-            
+
+            <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
 
             </section>
