feat(jobs): add heading for job position 1

--- a/jobs.html
+++ b/jobs.html
@@ -41,7 +41,7 @@
 
             <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
-
+                <h3> AI Programmer</h3>
             </section>
         </aside>        
     </main>
