feat(jobs): add job details

--- a/jobs.html
+++ b/jobs.html
@@ -42,6 +42,15 @@
             <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
                 <h3> AI Programmer</h3>
+
+                <h4>Job Details</h4>
+
+                <!-- Reference Number -->
+                <p><strong>Reference Number:</strong> AP103</p>
+                <!-- Salary -->
+                <p><strong>Salary:</strong> $103k per annum</p>
+                <!-- Reporting Line -->
+                <p><strong>Reporting Line:</strong>Lead Programmer</p>
             </section>
         </aside>        
     </main>
