feat(jobs): add job description

--- a/jobs.html
+++ b/jobs.html
@@ -51,6 +51,12 @@
                 <p><strong>Salary:</strong> $103k per annum</p>
                 <!-- Reporting Line -->
                 <p><strong>Reporting Line:</strong>Lead Programmer</p>
+
+                <!-- Short Description -->
+                <h4>Short description</h4>
+                <p>We are seeking a talented AI programmer to join our technical team! As an AI programmer, you will be developing a highly advanced AI behaviours and systems that will your team in developing a believable open world. This role will require you to have strong understanding in AI algorithms, excellent communication and high proficiency in programming.</p>
+
+                
             </section>
         </aside>        
     </main>
