--- a/jobs.html
+++ b/jobs.html
@@ -64,6 +64,17 @@
                     <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
                     <li>Ensuring the high-quality user experience for all platforms</li>
                 </ol>
+                    <!-- Skill Requirements: Essential & Preferrable -->
+                <h4>Requirements</h4>
+                <ul>
+                    <li>A bachelor&apos;s degree in computer science is preferred</li>                        <li>At least +5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
+                    <li>Excellent understanding in AI algorithms, data structures and 3D mathematics.</li>
+                    <li>Strong proficiency in C++ programming is essential.</li>
+                    <li>Extensive knowledge in Unreal Engine is preferred with an understanding in ECS or Mass Framework.</li>
+                    <li>Excellent communication skills and critical thinking skills.</li>
+                    <li>Shipped at least 1 AAA title is preferred.</li>
+                </ul>
+
             </section>
         </aside>        
     </main>
