--- a/jobs.html
+++ b/jobs.html
@@ -78,6 +78,10 @@
             </section>
 
             <hr>
+
+            <section id="job_pos2" class="job-position">
+
+            </section>
         </aside>        
     </main>
     
