chore(jobs): add comment for section and hr element

--- a/jobs.html
+++ b/jobs.html
@@ -77,8 +77,10 @@
 
             </section>
 
-            <hr>
+            
+            <hr> <!--This is to break the main content for readability-->
 
+            <!-- Job Position Description 2 -->
             <section id="job_pos2" class="job-position">
 
             </section>
