feat(jobs): add heading for job position 2

--- a/jobs.html
+++ b/jobs.html
@@ -82,7 +82,9 @@
 
             <!-- Job Position Description 2 -->
             <section id="job_pos2" class="job-position">
+                <h3> Game Developer</h3>
 
+                
             </section>
         </aside>        
     </main>
