--- a/jobs.html
+++ b/jobs.html
@@ -84,7 +84,14 @@
             <section id="job_pos2" class="job-position">
                 <h3> Game Developer</h3>
 
-                
+                <h4>Job Details</h4>
+                    
+                <!-- Reference Number -->
+                <p><strong>Reference Number:</strong> AP103</p>
+                <!-- Salary -->
+                <p><strong>Salary:</strong> $103k per annum</p>
+                <!-- Reporting Line -->
+                <p><strong>Reporting Line:</strong>Lead Programmer</p>
             </section>
         </aside>        
     </main>
