--- a/jobs.html
+++ b/jobs.html
@@ -96,6 +96,16 @@
                 <!-- Short Description -->
                 <h4>Short description</h4>
                 <p>We are seeking a talented AI programmer to join our technical team! As an AI programmer, you will be developing a highly advanced AI behaviours and systems that will your team in developing a believable open world. This role will require you to have strong understanding in AI algorithms, excellent communication and high proficiency in programming.</p>
+
+                <!-- Key Responsibility -->
+                <h4>Key Responsibilities</h4>
+                <ol>
+                    <li>Collaborating with designers, artists and developers into creating a smart and efficient AI systems that supports them in its application and tuning.</li>
+                    <li>Maintaining and Improving core AI systems that define AI behaviour in an open world environment.</li>
+                    <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
+                    <li>Ensuring the high-quality user experience for all platforms</li>
+                </ol>
+            
             </section>
         </aside>        
     </main>
