fix(jobs): replace wrong info for job 2 with correct one

--- a/jobs.html
+++ b/jobs.html
@@ -87,23 +87,24 @@
                 <h4>Job Details</h4>
                     
                 <!-- Reference Number -->
-                <p><strong>Reference Number:</strong> AP103</p>
+                <p><strong>Reference Number:</strong> GD401</p>
                 <!-- Salary -->
-                <p><strong>Salary:</strong> $103k per annum</p>
+                <p><strong>Salary:</strong> $100K per year</p>
                 <!-- Reporting Line -->
-                <p><strong>Reporting Line:</strong>Lead Programmer</p>
+                <p><strong>Reporting Line:</strong>Lead Developer</p>
 
                 <!-- Short Description -->
                 <h4>Short description</h4>
-                <p>We are seeking a talented AI programmer to join our technical team! As an AI programmer, you will be developing a highly advanced AI behaviours and systems that will your team in developing a believable open world. This role will require you to have strong understanding in AI algorithms, excellent communication and high proficiency in programming.</p>
+                <p>We are seeking an innovative and talented Game Developer to join our technical team! As a Game developer, you will be contributing to the continuous development of the game by developing new features and improving the game’s architecture while working closely with designers and other developers.</p>
 
                 <!-- Key Responsibility -->
                 <h4>Key Responsibilities</h4>
                 <ol>
-                    <li>Collaborating with designers, artists and developers into creating a smart and efficient AI systems that supports them in its application and tuning.</li>
-                    <li>Maintaining and Improving core AI systems that define AI behaviour in an open world environment.</li>
-                    <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
-                    <li>Ensuring the high-quality user experience for all platforms</li>
+                    <li>Conceptualize, implement, and maintain gameplay systems that achieve a fulfilling flow state, addictive game loops, and a risk/reward balance</li>
+                    <li>Developing the storyline, character back-stories, and dialogue, through scripts and storyboards, including any relevant research</li>
+                    <li>Create and maintain comprehensive documentation (such as design outlines, diagrams, and visual mockups) that details the triggers, interactions, and subsequent events of specific features or aspects of gameplay</li>
+                    <li>Work closely with User Experience (UX) and User Interface (UI) Designers to optimize the player interface</li>
+                    <li>Creating increasingly difficult levels, which include different environments and enemies.</li>
                 </ol>
             
             </section>
