feat(jobs): add requirements for job 2

--- a/jobs.html
+++ b/jobs.html
@@ -107,6 +107,17 @@
                     <li>Creating increasingly difficult levels, which include different environments and enemies.</li>
                 </ol>
             
+                <!-- Skill Requirements: Essential & Preferrable -->
+                <h4>Requirements</h4>
+                <ul>
+                    <li>At least +4 years of professional experience as a game developer is preferred.</li>
+                    <li>Completed a bachelor's degree in computer science</li>
+                    <li>High proficiency in C++ programming and OOP is essential with strong Unreal Engine expertise</li> 
+                    <li>Good knowledge in code practices and software development practices</li>
+                    <li>Strong problem-solving, analytical, and self-learning skills.</li>
+                    <li>Good communication skills and ability to collaborate with multidisciplinary teams</li>
+                    <li>Experience with modern graphics APIs is desired.</li>
+                </ul>
             </section>
         </aside>        
     </main>
