feat(jobs): link jobs.html to jobs_styles.css

--- a/jobs.html
+++ b/jobs.html
@@ -10,6 +10,10 @@
 
         <!-- Title of the tab -->
         <title>Job Description</title>
+
+        <!-- Link HTML to the CSS document -->
+        <link rel="stylesheet" href="styles/jobs_styles.css">
+
     </head>
     <body>
         <header>
