fix(jobs): fix styling reference link

--- a/jobs.html
+++ b/jobs.html
@@ -12,7 +12,7 @@
         <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-        <link rel="stylesheet" href="styles/jobs_styles.css">
+        <link rel="stylesheet" href="jobs_styles.css">
 
     </head>
     <body>
