feat(jobs): add hr element to the bottom of main + inline styling

--- a/jobs.html
+++ b/jobs.html
@@ -53,7 +53,7 @@
                 <!-- Reference Number -->
                 <p><strong>Reference Number:</strong> AP103</p>
                 <!-- Salary -->
-                <p><strong>Salary:</strong> $103k per annum</p>
+                <p><strong>Salary:</strong> $103k</p>
                 <!-- Reporting Line -->
                 <p><strong>Reporting Line:</strong>Lead Programmer</p>
 
@@ -94,7 +94,7 @@
                 <!-- Reference Number -->
                 <p><strong>Reference Number:</strong> GD401</p>
                 <!-- Salary -->
-                <p><strong>Salary:</strong> $100K per year</p>
+                <p><strong>Salary:</strong> $100K</p>
                 <!-- Reporting Line -->
                 <p><strong>Reporting Line:</strong>Lead Developer</p>
 
@@ -124,6 +124,8 @@
                     <li>Experience with modern graphics APIs is desired.</li>
                 </ul>
             </section>
+
+            <hr style="width: 100%;">
         </main>
 
         <footer>
