--- a/jobs.html
+++ b/jobs.html
@@ -42,7 +42,7 @@
             </aside>    
 
             <!-- Job Description Section -->
-            <h2>Job Description</h2>
+            <h2>Careers</h2>
 
             <!-- Job Position Description 1 -->
             <section id="job_pos1" class="job-position">
@@ -72,7 +72,8 @@
                     <!-- Skill Requirements: Essential & Preferrable -->
                 <h4>Requirements</h4>
                 <ul>
-                    <li>A bachelor&apos;s degree in computer science is preferred</li>                        <li>At least +5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
+                    <li>A bachelor&apos;s degree in computer science is preferred</li>                        
+                    <li>At least +5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
                     <li>Excellent understanding in AI algorithms, data structures and 3D mathematics.</li>
                     <li>Strong proficiency in C++ programming is essential.</li>
                     <li>Extensive knowledge in Unreal Engine is preferred with an understanding in ECS or Mass Framework.</li>
