refactor(jobs): divide job 1 requirements lists into two smaller lists

--- a/jobs.html
+++ b/jobs.html
@@ -12,7 +12,7 @@
         <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-        <link rel="stylesheet" href="jobs_styles.css">
+        <!-- <link rel="stylesheet" href="jobs_styles.css"> -->
 
     </head>
     <body>
@@ -69,16 +69,27 @@
                     <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
                     <li>Ensuring the high-quality user experience for all platforms</li>
                 </ol>
-                    <!-- Skill Requirements: Essential & Preferrable -->
+                    <!-- Requirements: Essential & Preferrable -->
                 <h4>Requirements</h4>
+
+                <!-- Essential Requirements -->
+                <h5>Essential</h5>
                 <ul>
-                    <li>A bachelor&apos;s degree in computer science is preferred</li>                        
-                    <li>At least +5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
-                    <li>Excellent understanding in AI algorithms, data structures and 3D mathematics.</li>
-                    <li>Strong proficiency in C++ programming is essential.</li>
-                    <li>Extensive knowledge in Unreal Engine is preferred with an understanding in ECS or Mass Framework.</li>
-                    <li>Excellent communication skills and critical thinking skills.</li>
-                    <li>Shipped at least 1 AAA title is preferred.</li>
+                    <li>A bachelor&apos;s degree in computer science, Information technology or related fields</li>                        
+                    <li>+5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
+                    <li>Strong understanding in AI algorithms and data structures</li>
+                    <li>Strong proficiency in C++ programming</li>
+                    <li>Strong proficiency in Unreal Engine</li>
+                </ul>
+
+                <!-- Preferrable Requirements -->
+                <h5>Preferrable</h5>
+                <ul>                        
+                    <li>Good understanding in ECS or Mass Framework.</li>
+                    <li>Good communication and interpersonal skills.</li>
+                    <li>Ability to work in a cross-functional team.</li>
+                    <li>Ability to communicate complex concepts to technical and non-technical teams</li>
+                    <li>Shipped at least 1 AAA title</li>
                 </ul>
 
             </section>
