refactor(jobs): divide job 2 requirements list into two lists

--- a/jobs.html
+++ b/jobs.html
@@ -126,15 +126,26 @@
             
                 <!-- Requirements: Essential & Preferrable -->
                 <h4>Requirements</h4>
+
+                <h5>Essential Requirements</h5>
                 <ul>
-                    <li>At least +4 years of professional experience as a game developer is preferred.</li>
-                    <li>Completed a bachelor's degree in computer science</li>
-                    <li>High proficiency in C++ programming and OOP is essential with strong Unreal Engine expertise</li> 
-                    <li>Good knowledge in code practices and software development practices</li>
+                    <li>4 years of professional experience as a game developer</li>
+                    <li>Completed a bachelor's degree in computer science, IT or related fields</li>
+                    <li>High proficiency in C++ programming and Object oriented programming (OOP)</li> 
+                    <li>Strong proficiency in Unreal engine Expertises</li>
                     <li>Strong problem-solving, analytical, and self-learning skills.</li>
-                    <li>Good communication skills and ability to collaborate with multidisciplinary teams</li>
-                    <li>Experience with modern graphics APIs is desired.</li>
+                    <li>Experience with modern graphics APIs</li>
                 </ul>
+
+                <h5>Preferrable Requirements</h5>
+                <ul> 
+                    <li>Good knowledge in code practices and software development practices</li>
+                    <li>Good communication and interpersonal skills</li>
+                    <li>Ability to collaborate with multidisciplinary teams</li>
+                    <li>Experience with modern graphics APIs</li>
+                </ul>
+
+
             </section>
 
             <hr style="width: 100%;">
