refactor(jobs): divide job position 1 into smaller subsections

--- a/jobs.html
+++ b/jobs.html
@@ -48,50 +48,58 @@
             <section id="job_pos1" class="job-position">
                 <h3> AI Programmer</h3>
 
-                <h4>Job Details</h4>
+                <!-- Job Details Section -->
+                <section. class="job-details">
+                    <h4>Job Details</h4>
+                    <!-- Reference Number -->
+                    <p><strong>Reference Number:</strong> AP103</p>
+                    <!-- Salary -->
+                    <p><strong>Salary:</strong> $103k</p>
+                    <!-- Reporting Line -->
+                    <p><strong>Reporting Line:</strong>Lead Programmer</p>
+                </section.>
+            
+                <section class="job-desc">
+                    <!-- Short Description -->
+                    <h4>Short description</h4>
+                    <p>We are seeking a talented AI programmer to join our technical team! As an AI programmer, you will be developing a highly advanced AI behaviours and systems that will your team in developing a believable open world. This role will require you to have strong understanding in AI algorithms, excellent communication and high proficiency in programming.</p>
+                </section>
 
-                <!-- Reference Number -->
-                <p><strong>Reference Number:</strong> AP103</p>
-                <!-- Salary -->
-                <p><strong>Salary:</strong> $103k</p>
-                <!-- Reporting Line -->
-                <p><strong>Reporting Line:</strong>Lead Programmer</p>
+                <section class="key-resp">
+                    <!-- Key Responsibility -->
+                    <h4>Key Responsibilities</h4>
+                    <ol>
+                        <li>Collaborating with designers, artists and developers into creating a smart and efficient AI systems that supports them in its application and tuning.</li>
+                        <li>Maintaining and Improving core AI systems that define AI behaviour in an open world environment.</li>
+                        <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
+                        <li>Ensuring the high-quality user experience for all platforms</li>
+                    </ol>
+                </section>
 
-                <!-- Short Description -->
-                <h4>Short description</h4>
-                <p>We are seeking a talented AI programmer to join our technical team! As an AI programmer, you will be developing a highly advanced AI behaviours and systems that will your team in developing a believable open world. This role will require you to have strong understanding in AI algorithms, excellent communication and high proficiency in programming.</p>
-
-                <!-- Key Responsibility -->
-                <h4>Key Responsibilities</h4>
-                <ol>
-                    <li>Collaborating with designers, artists and developers into creating a smart and efficient AI systems that supports them in its application and tuning.</li>
-                    <li>Maintaining and Improving core AI systems that define AI behaviour in an open world environment.</li>
-                    <li>Writing high quality code engine base that architects and enhances AI characters while aligning with the project goals</li>
-                    <li>Ensuring the high-quality user experience for all platforms</li>
-                </ol>
+                <section class="job-req">
                     <!-- Requirements: Essential & Preferrable -->
-                <h4>Requirements</h4>
+                    <h4>Requirements</h4>
 
-                <!-- Essential Requirements -->
-                <h5>Essential</h5>
-                <ul>
-                    <li>A bachelor&apos;s degree in computer science, Information technology or related fields</li>                        
-                    <li>+5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
-                    <li>Strong understanding in AI algorithms and data structures</li>
-                    <li>Strong proficiency in C++ programming</li>
-                    <li>Strong proficiency in Unreal Engine</li>
-                </ul>
+                    <!-- Essential Requirements -->
+                    <h5>Essential</h5>
+                    <ul>
+                        <li>A bachelor&apos;s degree in computer science, Information technology or related fields</li>                        
+                        <li>+5 years of professional experience as a programmer in game development, with a focus on AI systems and development.</li>
+                        <li>Strong understanding in AI algorithms and data structures</li>
+                        <li>Strong proficiency in C++ programming</li>
+                        <li>Strong proficiency in Unreal Engine</li>
+                    </ul>
 
-                <!-- Preferrable Requirements -->
-                <h5>Preferrable</h5>
-                <ul>                        
-                    <li>Good understanding in ECS or Mass Framework.</li>
-                    <li>Good communication and interpersonal skills.</li>
-                    <li>Ability to work in a cross-functional team.</li>
-                    <li>Ability to communicate complex concepts to technical and non-technical teams</li>
-                    <li>Shipped at least 1 AAA title</li>
-                </ul>
-
+                    <!-- Preferrable Requirements -->
+                    <h5>Preferrable</h5>
+                    <ul>                        
+                        <li>Good understanding in ECS or Mass Framework.</li>
+                        <li>Good communication and interpersonal skills.</li>
+                        <li>Ability to work in a cross-functional team.</li>
+                        <li>Ability to communicate complex concepts to technical and non-technical teams</li>
+                        <li>Shipped at least 1 AAA title</li>
+                    </ul>
+                </section>
             </section>
 
             
@@ -144,7 +152,6 @@
                     <li>Ability to collaborate with multidisciplinary teams</li>
                     <li>Experience with modern graphics APIs</li>
                 </ul>
-
 
             </section>
 
