feat(jobs): add new job position 3 structure

--- a/jobs.html
+++ b/jobs.html
@@ -171,6 +171,69 @@
                  </section>
             </section>
 
+            <!-- Job Position Description 3 -->
+            <section id="job_pos3" class="job-position">
+                <h3> Job Title</h3>
+
+                <!-- Job Details Section -->
+                <section class="job-details">
+                    <h4>Job Details</h4>
+                        
+                    <!-- Reference Number -->
+                    <p><strong>Reference Number:</strong> GD401</p>
+                    <!-- Salary -->
+                    <p><strong>Salary:</strong> *salary number*</p>
+                    <!-- Reporting Line -->
+                    <p><strong>Reporting Line:</strong> *reporting line*</p>
+                </section>
+
+                <!-- Job Description Section -->
+                <section class="job-desc">
+                    <!-- Short Description -->
+                    <h4>Short description</h4>
+                    <p>*description*</p>
+                </section>
+
+                <!-- Job Responsibility Section -->
+                 <section class="key-resp">
+                    <!-- Key Responsibility -->
+                    <h4>Key Responsibilities</h4>
+                    <ol>
+                        <li>Responsbility 1</li>
+                        <li>Responsbility 2</li>
+                        <li>Responsbility 3</li>
+                        <li>Responsbility 4</li>
+                        <li>Responsbility 5</li>
+                    </ol>
+                 </section>
+
+                <!-- Job Requirements Section -->
+                <section class="job-req">
+                    <!-- Requirements: Essential & Preferrable -->
+                    <h4>Requirements</h4>
+
+                    <!-- Essential Requirements -->
+                    <h5>Essential Requirements</h5>
+                    <ul>
+                        <li>Essential Requirement 1</li>
+                        <li>Essential Requirement 2</li>
+                        <li>Essential Requirement 3</li>
+                        <li>Essential Requirement 4</li>
+                        <li>Essential Requirement 5</li>
+                    </ul>
+
+                    <!-- Preferrable Requirements -->
+                    <h5>Preferrable Requirements</h5>
+                    <ul> 
+                        <li>Preferrable Requirement 1</li>
+                        <li>Preferrable Requirement 2</li>
+                        <li>Preferrable Requirement 3</li>
+                        <li>Preferrable Requirement 4</li>
+                        <li>Preferrable Requirement 5</li>
+                    </ul>
+                 </section>
+            </section>
+
             <hr style="width: 100%;">
         </main>
 
