--- a/jobs.html
+++ b/jobs.html
@@ -180,18 +180,18 @@
                     <h4>Job Details</h4>
                         
                     <!-- Reference Number -->
-                    <p><strong>Reference Number:</strong> GD401</p>
+                    <p><strong>Reference Number:</strong> TA801</p>
                     <!-- Salary -->
-                    <p><strong>Salary:</strong> *salary number*</p>
+                    <p><strong>Salary:</strong> $95-100K per year</p>
                     <!-- Reporting Line -->
-                    <p><strong>Reporting Line:</strong> *reporting line*</p>
+                    <p><strong>Reporting Line:</strong> Technical Director</p>
                 </section>
 
                 <!-- Job Description Section -->
                 <section class="job-desc">
                     <!-- Short Description -->
                     <h4>Short description</h4>
-                    <p>*description*</p>
+                    <p>*We are seeking a creative and skillful Technical Artist to join our team. As a technical artist, you will be focusing on developing the tools and pipeline for our real-time game production and bridging the gaps between the arts and technology! Our ideal candidate is someone thrives in the gaps between the technical and arts department, bringing in their creative artist direction and their strong critical thinking skills.</p>
                 </section>
 
                 <!-- Job Responsibility Section -->
@@ -199,11 +199,10 @@
                     <!-- Key Responsibility -->
                     <h4>Key Responsibilities</h4>
                     <ol>
-                        <li>Responsbility 1</li>
-                        <li>Responsbility 2</li>
-                        <li>Responsbility 3</li>
-                        <li>Responsbility 4</li>
-                        <li>Responsbility 5</li>
+                        <li>Collaborating closely with artists, animators, and developers to understand their needs and ensure the best visuals for the game without any technical setbacks</li>
+                        <li>Designing and optimising production pipelines to production pipeline to ensure seamless flow of assets from art creation to integration</li>
+                        <li>Ensuring in-game assets are high quality, optimised and efficiently managed throughout the entire production process</li>
+                        <li>•	Identifying production bottlenecks and contribute to building and maintaining custom tools and scripts for building efficient workflows</li>
                     </ol>
                  </section>
 
@@ -215,21 +214,25 @@
                     <!-- Essential Requirements -->
                     <h5>Essential Requirements</h5>
                     <ul>
-                        <li>Essential Requirement 1</li>
-                        <li>Essential Requirement 2</li>
-                        <li>Essential Requirement 3</li>
-                        <li>Essential Requirement 4</li>
-                        <li>Essential Requirement 5</li>
+                        <li>+4 years of Experience in game development or other related experience</li>
+                        <li>Bachelor’s degree in computer science, Graphics Art or other related fields</li>
+                        <li>Ability to effectively work and collaborate with both artistic and technical teams</li>
+                        <li>Strong critical thinking and problem-solving skills</li>
+                        <li>Strong communication skills</li>
+                        <li>Proficiency in Python, MEL, or similar scripting languages</li>
+                        <li>Solid Understanding in game development production pipelines and workflows and real time assets.</li>
+                        <li>Proficiency in commercial 3D software like Autodesk, Maya, Blender</li>
                     </ul>
 
                     <!-- Preferrable Requirements -->
                     <h5>Preferrable Requirements</h5>
                     <ul> 
-                        <li>Preferrable Requirement 1</li>
-                        <li>Preferrable Requirement 2</li>
-                        <li>Preferrable Requirement 3</li>
-                        <li>Preferrable Requirement 4</li>
-                        <li>Preferrable Requirement 5</li>
+                        <li>Genuine passion for video games.</li>
+                        <li>Proficiency in game engines like Unreal Engine or Unity</li>
+                        <li>Good understanding with shader development, materials and rendering optimisation</li>
+                        <li>Strong background in 3D workflows, including modelling, texturing, animation, lighting, VFX, scripting</li>
+                        <li>Understanding in procedural workflows </li>
+                        <li>Good Knowledge with version control systems (Git).</li>
                     </ul>
                  </section>
             </section>
