chore(jobs): replace placeholders on job 4 with information

--- a/jobs.html
+++ b/jobs.html
@@ -238,25 +238,25 @@
 
                 <!-- Job Position Description 3 -->
                 <section id="job_pos3" class="job-position">
-                    <h3> Job Title</h3>
+                    <h3>Network Programmer</h3>
 
                     <!-- Job Details Section -->
                     <section class="job-details">
                         <h4>Job Details</h4>
                             
                         <!-- Reference Number -->
-                        <p><strong>Reference Number:</strong> GD401</p>
+                        <p><strong>Reference Number:</strong> NP192</p>
                         <!-- Salary -->
-                        <p><strong>Salary:</strong> *salary number*</p>
+                        <p><strong>Salary:</strong> 90-120K</p>
                         <!-- Reporting Line -->
-                        <p><strong>Reporting Line:</strong> *reporting line*</p>
+                        <p><strong>Reporting Line:</strong> Networks Manager</p>
                     </section>
 
                     <!-- Job Description Section -->
                     <section class="job-desc">
                         <!-- Short Description -->
                         <h4>Short description</h4>
-                        <p>*description*</p>
+                        <p>We are seeking talented network programmer to join our team! As a network programmer, you will be focusing on designing and implementing network architecture and online systems to ensure the game can be transmitted to multiple devices. Our ideal candidate should have a strong background in network architecture and can effectively work with other developers.</p>
                     </section>
 
                     <!-- Job Responsibility Section -->
@@ -264,11 +264,11 @@
                         <!-- Key Responsibility -->
                         <h4>Key Responsibilities</h4>
                         <ol>
-                            <li>Responsbility 1</li>
-                            <li>Responsbility 2</li>
-                            <li>Responsbility 3</li>
-                            <li>Responsbility 4</li>
-                            <li>Responsbility 5</li>
+                            <li>Providing support on cloud server deployment and maintenance</li>
+                            <li>Performing an in-depth analysis of the client&apos;s and server&apos;s CPU and memory and determining necessary changes to improve the performance of the game</li>
+                            <li>Optimising network code to reduce bandwidth usage and ensuring a low-latency and high-performance online experience for players</li>
+                            <li>Working closely with game developers and other departments to integrate high quality network features seamlessly</li>
+                            <li>Performing troubleshooting and debugging network code to ensure stability and performance across platforms</li>
                         </ol>
                     </section>
 
@@ -280,21 +280,23 @@
                         <!-- Essential Requirements -->
                         <h5>Essential Requirements</h5>
                         <ul>
-                            <li>Essential Requirement 1</li>
-                            <li>Essential Requirement 2</li>
-                            <li>Essential Requirement 3</li>
-                            <li>Essential Requirement 4</li>
-                            <li>Essential Requirement 5</li>
+                            <li>Bachelor&apos;s degree in computer science, engineering or other related fields</li>
+                            <li>5 years of professional experience as a network programmer or related experience</li>
+                            <li>Proficiency in C++ or similar programming </li>
+                            <li>Ability to collaborate effectively with other team</li>
+                            <li>Good communication and interpersonal skills</li>
+                            <li>Strong understanding of network optimization and real-time performance</li>
+                            <li>Strong analytical, problem-solving, and troubleshooting skills</li>
                         </ul>
 
                         <!-- Preferrable Requirements -->
                         <h5>Preferrable Requirements</h5>
                         <ul> 
-                            <li>Preferrable Requirement 1</li>
-                            <li>Preferrable Requirement 2</li>
-                            <li>Preferrable Requirement 3</li>
-                            <li>Preferrable Requirement 4</li>
-                            <li>Preferrable Requirement 5</li>
+                            <li>Strong understanding in game engines like Unreal engine</li>
+                            <li>Proficient in network replication within game engines</li>
+                            <li>Proficient in the network architecture of a game engine.</li>
+                            <li>Experience in designing scalable, performant systems</li>
+                            <li>Understanding of online gaming systems, multiplayer architecture, and backend technologies</li>
                         </ul>
                     </section>
                 </section>
