--- a/jobs.html
+++ b/jobs.html
@@ -300,10 +300,20 @@
                         </ul>
                     </section>
                 </section>
-               
+ 
             </section>
 
-            <hr style="width: 100%;">
+            <div class="apply-btn">
+                <!-- Apply Now button -->                                       <!-- NOTE: The html design of the button was found on the internet -->
+                <a href="application_form.html">                                <!-- Website Title: Making a <button> that's a link in HTML -->
+                    <button>                                                    <!-- Website link: https://stackoverflow.com/questions/3341011/making-a-button-thats-a-link-in-html -->
+                        Apply Now                                               <!-- I used the first answer shown on the discussion page-->                                                                                                   
+                    </button>                                                   
+
+                </a>
+            </div>
+            
+
         </main>
 
         <footer>
