feat(jobs): add new apply button

--- a/jobs.html
+++ b/jobs.html
@@ -301,10 +301,14 @@
                     </section>
                 </section>
  
+                <form action="apply.html">
+                    <button class="apply-btn">
+                        Apply Now
+                    </button>
+                </form>
             </section>
 
 
-            
 
         </main>
 
