refactor(jobs): change sidebar to why join us section

--- a/jobs.html
+++ b/jobs.html
@@ -32,13 +32,16 @@
         </header>
 
         <main>
-            <!-- Sidebar Section -->
-            <aside class="sidebar">
-                    <h2>Main Contents</h2>
-                <ul>
-                    <li><a href="#job_pos1">AI Programmer</a></li> <!-- Hyperlinked to Job Position 1 Section -->
-                    <li><a href="#job_pos2">Game Designer</a></li> <!-- Hyperlinked to Job Position 2 Section -->
-                </ul>
+            <!-- Why Join Us  Section -->
+            <aside class="join-us">
+                    <h2> Why Join us!</h2>
+                <ol>
+                    <li>We offer flexible working options, including remote work opportunities!</li> 
+                    <li>We offer a competitive salary that includes additional bonuses as you gain experience!</li>
+                    <li>We offer Extended parental leave for newly families!</li>
+                    <li>Access to discounted mental health assistance!</li>
+                    <li>We are like a family! Be a part of a supportive and inclusive culture!</li>
+                </ol>
             </aside>    
 
             <!-- Job Description Section -->
@@ -301,14 +304,13 @@
                     </section>
                 </section>
  
+                <!-- Apply Now Section -->
                 <form action="apply.html">
                     <button class="apply-btn">
                         Apply Now
                     </button>
                 </form>
             </section>
-
-
 
         </main>
 
