feat(jobs): add company name and logo with hyperlink

--- a/jobs.html
+++ b/jobs.html
@@ -17,8 +17,15 @@
     </head>
     <body>
         <header>
-            <!-- Company Name -->
-            <h1>Panda Mice Enterprise</h1>
+            <!-- Hyperlinked Company name and logo-->
+            <a href="index.html" class="panda-mice">
+                <!-- Company Logo -->
+                <img src="Panda Mice-logo.png" alt="Panda Mice Logo" class="logo">
+                
+                <!-- Company Name -->
+                <h1>Panda Mice Enterprise</h1>
+            </a>
+
 
             <!-- Navigation Bar -->
                 <nav>
