--- a/jobs.html
+++ b/jobs.html
@@ -18,7 +18,7 @@
     <body>
         <header>
             <!-- Hyperlinked Company name and logo-->
-            <a href="index.html" class="panda-mice">
+            <a href="index.html" class="job-page">
                 <!-- Company Logo -->
                 <img src="Panda Mice-logo.png" alt="Panda Mice Logo" class="logo">
                 
