feat(jobs): add contacts, compant and follow us section in footer

--- a/jobs.html
+++ b/jobs.html
@@ -322,7 +322,39 @@
         </main>
 
         <footer>
-            <p>&copy;Panda Mice Enterprise. Copyright 2025 </p>
+            <!-- Copyright Statement -->
+            <p>&copy; 2025 Panda Mice Enterprise. All rights reserved. </p>
+
+            <div class="contact">
+                <p><strong>Contact Us</strong></p>
+                <ul>
+                    <li><a href="emailto:info@pandamice.com">Email</a></li>
+                    <li>Ph: +61439821766</li>
+                </ul>
+            </div>
+
+
+            <div class="company">
+                <p><strong>Company</strong></p>
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="jobs.html">Careers</a></li>
+                    <li>Events</li>
+                    <li>Terms &amp; Conditions</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+
+            <div class="social">
+                <p><strong>Follow Us</strong></p>
+                <ul>
+                    <li>Instagram</li>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                </ul>
+            </div>
+
         </footer>
         
     </body>
