feat(jobs): add div element for logo and title

--- a/jobs.html
+++ b/jobs.html
@@ -12,19 +12,21 @@
         <title>Job Description</title>
 
         <!-- Link HTML to the CSS document -->
-        <!-- <link rel="stylesheet" href="jobs_styles.css"> -->
+        <link rel="stylesheet" href="jobs_styles.css">
 
     </head>
     <body>
         <header>
             <!-- Hyperlinked Company name and logo-->
-            <a href="index.html" class="job-page">
-                <!-- Company Logo -->
-                <img src="Panda Mice-logo.png" alt="Panda Mice Logo" class="logo">
-                
-                <!-- Company Name -->
-                <h1>Panda Mice Enterprise</h1>
-            </a>
+            <div class="job-head">
+                <a href="index.html">
+                    <!-- Company Logo -->
+                    <img src="Panda Mice-logo.png" alt="Panda Mice Logo" >
+                    <!-- Company Name -->
+                    <h1>Panda Mice Enterprise</h1>
+                </a>
+            </div>
+
 
 
             <!-- Navigation Bar -->
