--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About our team — Panda Mice</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/about_style.css">
   <meta name="description" content="Meet the recruitment project group: contributions, fun facts, and team photo.">
 </head>
 <body>
@@ -40,7 +40,7 @@
         <li><strong>Class:</strong>
           <ul>
             <li><strong>Day:</strong> Tuesday</li>
-            <li><strong>Time:</strong> 2:30–5:30 pm AEST</li>
+            <li><strong>Time:</strong> 2:30–4:30 pm AEST</li>
           </ul>
         </li>
       </ul>
