--- a/apply.html
+++ b/apply.html
@@ -1,2 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <!-- Metatags for Job Application Page -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Job Application Form">
+    <meta name="author" content="Can Sang">
