--- a/apply.html
+++ b/apply.html
@@ -6,3 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Job Application Form">
     <meta name="author" content="Can Sang">
+    <link rel="stylesheet" href="jobs_styles.css"> 
+</head>
+
+<body>
+<div class="container">
