--- a/apply.html
+++ b/apply.html
@@ -6,8 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Job Application Form">
     <meta name="author" content="Can Sang">
+    <link rel="stylesheet" href="jobs_styles.css">
+        <!-- Title of the tab -->
+    <title>Job Description</title>
+
+        <!-- Link HTML to the CSS document -->
     <link rel="stylesheet" href="jobs_styles.css"> 
 </head>
 
 <body>
 <div class="container">
+
+    <!-- Header Section -->
+    <div class="header">
+        <!-- Logo -->
+        <div class="logo-container">
+            <img src="Panda Mice-logo.png" alt="PandaMice Logo" />
+        </div>
+
+        <!-- Navigation Menu -->
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="apply.html">Apply</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
+    <!-- Main Content Section -->
+     <main>
+      <!--Page Title-->
+       <h1 class="text-center">Job Application</h1>
+       <!--Form Begin -->
+       <form method="post" action="http://mercury.swin.edu.au/it000000/formtest.php">
+        
+       </form>
+     </main>
