--- a/apply.html
+++ b/apply.html
@@ -59,6 +59,90 @@
             <label for="dob">Date of Birth</label>
             <input type="date" id="dob" name="dob" required />
           </p>
-        </fieldset>       
+        </fieldset>  
+        <!-- Gender -->
+        <fieldset class="job_apply_page">
+          <legend>Gender</legend>
+          <p>
+            <label for="male">Male</label>
+            <input type="radio" id="male" name="gender" value="male" required />
+          </p>
+          <p>
+            <label for="female">Female</label>
+            <input type="radio" id="female" name="gender" value="female" />
+          </p>
+          <p>
+            <label for="other">Other</label>
+            <input type="radio" id="other" name="gender" value="other" />
+          </p>
+        </fieldset>    
+        <!-- Address Information -->
+        <fieldset class="job_apply_page grey_content_section">
+          <legend class="legend_2">Address Information</legend>
+          <p>
+            <label for="street">Street Address</label>
+            <input type="text" id="street" name="street" maxlength="40" required />
+          </p>
+          <p>
+            <label for="suburb">Suburb/Town</label>
+            <input type="text" id="suburb" name="suburb" maxlength="40" required />
+          </p>
+          <p>
+            <label for="state">State</label>
+            <select id="state" name="state" required>
+              <option value="">Please Select</option>
+              <option value="VIC">VIC</option>
+              <option value="NSW">NSW</option>
+              <option value="QLD">QLD</option>
+              <option value="NT">NT</option>
+              <option value="WA">WA</option>
+              <option value="SA">SA</option>
+              <option value="TAS">TAS</option>
+              <option value="ACT">ACT</option>
+            </select>
+          </p>
+          <p>
+            <label for="postcode">Postcode</label>
+            <input type="text" id="postcode" name="postcode" maxlength="4" required />
+          </p>
+        </fieldset>
+
+        <!-- Contact Information -->
+        <fieldset class="job_apply_page">
+          <legend>Contact Information</legend>
+          <p>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+          </p>
+          <p>
+            <label for="phone">Phone Number</label>
+            <input type="text" id="phone" name="phone" maxlength="12" required />
+          </p>
+        </fieldset>
+
+        <!-- Skills -->
+        <fieldset class="job_apply_page grey_content_section">
+          <legend class="legend_2">Skills</legend>
+          <p>
+            <label for="skill1">Programming</label>
+            <input type="checkbox" id="skill1" name="skills[]" value="programming" />
+          </p>
+          <p>
+            <label for="skill2">Web Design</label>
+            <input type="checkbox" id="skill2" name="skills[]" value="design" />
+          </p>
+          <p>
+            <label for="skill3">Communication</label>
+            <input type="checkbox" id="skill3" name="skills[]" value="communication" />
+          </p>
+          <p>
+            <label for="skill4">Teamwork</label>
+            <input type="checkbox" id="skill4" name="skills[]" value="teamwork" />
+          </p>
+          <p>
+            <label for="otherskills">Other Skills</label>
+            <textarea id="otherskills" name="otherskills" rows="4" cols="40"></textarea>
+          </p>
+        </fieldset> 
        </form>
      </main>
